<resources>
    <string name="app_name">BottomSheet</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="filters">Filters</string>
    <string name="lighting">\t Lighting</string>
    <string name="vibes">\t Vibes</string>
    <string name="quiet">\t Quiet</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="people">\t People</string>
    <string name="search">Search Study Spots</string>
</resources>