<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transparent_panel_hud"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/filters"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_layout"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/filter_1"
            style="@style/radionbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="@string/vibes" />

        <RadioButton
            android:id="@+id/filter_2"
            style="@style/radionbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/quiet" />

        <RadioButton
            android:id="@+id/filter_3"
            style="@style/radionbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lighting" />

        <RadioButton
            android:id="@+id/filter_4"
            style="@style/radionbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/people" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/apply_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:text="@string/apply_filters" />
    </LinearLayout>
</RelativeLayout>